// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`06842b19-a657-41b6-9214-3d9b94c387e4 1`] = `
{
  "returns 1 for 1 uncovered statement WHEN conditionals excluded": {
    "result": 1,
  },
}
`;

exports[`3b34bd76-56d9-4a28-9163-246a31cf7d95 1`] = `
{
  "returns 1 for 1 uncovered conditional WHEN statements excluded": {
    "result": 1,
  },
}
`;

exports[`5868e17d-d3b8-4ab1-a1b0-473084a53758 1`] = `
{
  "returns about 1.64 WHEN conditionals AND statements are 2 of 3 uncovered": {
    "result": 1.6415258844598883,
  },
}
`;

exports[`7532b751-b93a-4cf4-92ec-c39f771020a1 1`] = `
{
  "returns about 0.82 WHEN 2 of 3 conditionals uncovered AND statements excluded": {
    "result": 0.8207629422299442,
  },
}
`;

exports[`769978f9-3ae3-4966-a706-5f484d05d1d6 1`] = `
{
  "returns 0 because 0 statements AND conditionals excluded": {
    "result": 0,
  },
}
`;

exports[`aa1fb537-79aa-4c10-940c-9c2628786224 1`] = `
{
  "returns about 0.82 WHEN 2 of 3 statements uncovered AND conditionals excluded": {
    "result": 0.8207629422299442,
  },
}
`;

exports[`ab67bf36-4b32-4967-b7cb-3916181f1b68 1`] = `
{
  "returns 0 because 0 conditionals AND 0 statements": {
    "result": 0,
  },
}
`;

exports[`d154d99f-e253-4da7-9537-788e48182353 1`] = `
{
  "returns 0 because 0 conditionals AND statements excluded": {
    "result": 0,
  },
}
`;

exports[`e226e9dd-2bce-46f2-8489-d68635fdb4d4 1`] = `
{
  "returns 2 for 1 uncovered statement AND 1 uncovered conditional": {
    "result": 2,
  },
}
`;
